--- a/.github/workflows/build-openwrt-linksys_wrt1900acs.yml
+++ b/.github/workflows/build-openwrt-linksys_wrt1900acs.yml
@@ -75,6 +75,24 @@ jobs:
         chmod +x $DIY_P1_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
+        
+    ###########下载passwall的代码############################################################
+    - name: Clone passwall code
+      run: |
+        git clone https://github.com/yiguihai/luci-app-passwall-plus.git
+        
+    ###########下载VSSR的代码git lua-maxminddb###############################################
+    - name: Clone luci-app-vssr code
+      run: |
+        git clone https://github.com/jerrykuku/luci-app-vssr.git
+        git clone https://github.com/jerrykuku/lua-maxminddb.git
+        git clone https://github.com/fw876/helloworld packages/SSRPlus
+        
+    ###########下载SSR魔改版的代码############################################################      
+    - name: Clone luci-app-ssr-plus-Jo code
+      run: |
+        git clone https://github.com/king-afk/luci-app-ssr-plus-Jo.git
+        git clone https://github.com/Leo-Jo-My/my package/my
 
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
